Ingress-only/ingress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apim-ingress-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apim-ingress-pod
  template:
    metadata:
      labels:
        app: apim-ingress-pod
    spec:
      imagePullSecrets:
        - name: apimdev
      containers:
        - name: azure-apim-gateway
          image: mcr.microsoft.com/azure-api-management/gateway:1.2.0-ingress-3
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8081
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: apim-ingress-service
spec:
  selector:
    app: apim-ingress-pod
  type: LoadBalancer
  ports:
    - port: 80
      name: ingress-http
      targetPort: 8080
    - port: 443
      name: ingress-https
      targetPort: 8081
