Ingress-only/ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "azure-api-management/gateway"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  tls:
    - hosts:
        - www.contoso.com
      secretName: tls-www-contoso-com
  rules:
    - host: "www.contoso.com"
      http: 
        paths:
        - path: /echo-tls
          pathType: Prefix
          backend:
            serviceName: echo-service
            servicePort: 8080
